# Machine-Learning-in-CPP

./: CMakeLists.txt  Makefile
KNN/include/: knn.hpp
KNN/src/: CMakeLists.txt  knn.cc
app/: CMakeLists.txt  app.cc
mnist/: CMakeLists.txt
mnist/include/: data.hpp  data_handler.hpp
mnist/src/: CMakeLists.txt  data.cc  data_handler.cc
